--- a/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
+++ b/share/qtvcp/screens/qtplasmac_4x3/qtplasmac_4x3.ui
@@ -511,6 +511,9 @@
                         </property>
                         <item>
                          <widget class="GcodeDisplay" name="gcode_display">
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
+                          </property>
                           <property name="frameShape">
                            <enum>QFrame::NoFrame</enum>
                           </property>
@@ -4582,6 +4585,9 @@ HOME ALL</string>
                             <height>16777215</height>
                            </size>
                           </property>
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
+                          </property>
                           <property name="text">
                            <string>SELECT</string>
                           </property>
@@ -4615,6 +4621,9 @@ HOME ALL</string>
                             <width>16777215</width>
                             <height>16777215</height>
                            </size>
+                          </property>
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
                           </property>
                           <property name="text">
                            <string>NEXT</string>
@@ -4653,6 +4662,9 @@ HOME ALL</string>
                             <height>16777215</height>
                            </size>
                           </property>
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
+                          </property>
                           <property name="text">
                            <string>PREV</string>
                           </property>
@@ -4683,6 +4695,9 @@ HOME ALL</string>
                             <width>40</width>
                             <height>40</height>
                            </size>
+                          </property>
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
                           </property>
                           <property name="text">
                            <string>CANCEL</string>
@@ -4910,6 +4925,9 @@ HOME ALL</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string>DIA
 +</string>
@@ -4935,6 +4953,9 @@ HOME ALL</string>
                                <width>60</width>
                                <height>40</height>
                               </size>
+                             </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
                              </property>
                              <property name="text">
                               <string>DIA
@@ -4981,6 +5002,9 @@ HOME ALL</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string>ZOOM
 +</string>
@@ -5006,6 +5030,9 @@ HOME ALL</string>
                                <width>60</width>
                                <height>40</height>
                               </size>
+                             </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
                              </property>
                              <property name="text">
                               <string>ZOOM
@@ -5052,6 +5079,9 @@ HOME ALL</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string>GOTO
 ORIGIN</string>
@@ -5091,6 +5121,9 @@ ORIGIN</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string>MARK
 EDGE</string>
@@ -5129,7 +5162,11 @@ EDGE</string>
                    <number>0</number>
                   </property>
                   <item>
-                   <widget class="OriginOffsetView" name="originoffsetview"/>
+                   <widget class="OriginOffsetView" name="originoffsetview">
+                    <property name="focusPolicy">
+                     <enum>Qt::NoFocus</enum>
+                    </property>
+                   </widget>
                   </item>
                  </layout>
                 </widget>
@@ -5218,6 +5255,9 @@ EDGE</string>
                             <height>16</height>
                            </size>
                           </property>
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
+                          </property>
                           <property name="text">
                            <string>BACK</string>
                           </property>
@@ -5237,6 +5277,9 @@ EDGE</string>
                             <height>16</height>
                            </size>
                           </property>
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
+                          </property>
                           <property name="text">
                            <string>RELOAD USER MANUAL</string>
                           </property>
@@ -5255,6 +5298,9 @@ EDGE</string>
                             <width>16777215</width>
                             <height>16</height>
                            </size>
+                          </property>
+                          <property name="focusPolicy">
+                           <enum>Qt::NoFocus</enum>
                           </property>
                           <property name="text">
                            <string>FORWARD</string>
@@ -6134,6 +6180,9 @@ EDGE</string>
                                   <height>40</height>
                                  </size>
                                 </property>
+                                <property name="focusPolicy">
+                                 <enum>Qt::NoFocus</enum>
+                                </property>
                                 <property name="text">
                                  <string>REV</string>
                                 </property>
@@ -6188,6 +6237,9 @@ EDGE</string>
                                   <height>40</height>
                                  </size>
                                 </property>
+                                <property name="focusPolicy">
+                                 <enum>Qt::NoFocus</enum>
+                                </property>
                                 <property name="text">
                                  <string>CANCEL
 MOVE</string>
@@ -6229,6 +6281,9 @@ MOVE</string>
                                <width>16777215</width>
                                <height>16777215</height>
                               </size>
+                             </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
                              </property>
                              <property name="maximum">
                               <number>100</number>
@@ -6330,6 +6385,9 @@ MOVE</string>
                                   <height>40</height>
                                  </size>
                                 </property>
+                                <property name="focusPolicy">
+                                 <enum>Qt::NoFocus</enum>
+                                </property>
                                 <property name="layoutDirection">
                                  <enum>Qt::LeftToRight</enum>
                                 </property>
@@ -6425,6 +6483,9 @@ MOVE</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string/>
                              </property>
@@ -6456,6 +6517,9 @@ MOVE</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string/>
                              </property>
@@ -6486,6 +6550,9 @@ MOVE</string>
                                <width>40</width>
                                <height>40</height>
                               </size>
+                             </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
                              </property>
                              <property name="text">
                               <string/>
@@ -6528,6 +6595,9 @@ MOVE</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string/>
                              </property>
@@ -6558,6 +6628,9 @@ MOVE</string>
                                <width>40</width>
                                <height>40</height>
                               </size>
+                             </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
                              </property>
                              <property name="text">
                               <string/>
@@ -6590,6 +6663,9 @@ MOVE</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string/>
                              </property>
@@ -6621,6 +6697,9 @@ MOVE</string>
                                <height>40</height>
                               </size>
                              </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
+                             </property>
                              <property name="text">
                               <string/>
                              </property>
@@ -6651,6 +6730,9 @@ MOVE</string>
                                <width>40</width>
                                <height>40</height>
                               </size>
+                             </property>
+                             <property name="focusPolicy">
+                              <enum>Qt::NoFocus</enum>
                              </property>
                              <property name="layoutDirection">
                               <enum>Qt::LeftToRight</enum>
@@ -11364,6 +11446,9 @@ ANTI DIVE</string>
                             <property name="alignment">
                              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
                             </property>
+                            <property name="buttonSymbols">
+                             <enum>QAbstractSpinBox::PlusMinus</enum>
+                            </property>
                             <property name="decimals">
                              <number>0</number>
                             </property>
@@ -11397,6 +11482,9 @@ ANTI DIVE</string>
                             </property>
                             <property name="alignment">
                              <set>Qt::AlignRight|Qt::AlignTrailing|Qt::AlignVCenter</set>
+                            </property>
+                            <property name="buttonSymbols">
+                             <enum>QAbstractSpinBox::PlusMinus</enum>
                             </property>
                             <property name="accelerated">
                              <bool>true</bool>
@@ -18756,9 +18844,11 @@ CONFIG</string>
   <tabstop>float_switch_travel</tabstop>
   <tabstop>probe_feed_rate</tabstop>
   <tabstop>probe_start_height</tabstop>
+  <tabstop>slat_height</tabstop>
   <tabstop>ohmic_probe_offset</tabstop>
   <tabstop>ohmic_max_attempts</tabstop>
   <tabstop>skip_ihs_distance</tabstop>
+  <tabstop>offset_feed_rate</tabstop>
   <tabstop>safe_height</tabstop>
   <tabstop>scribe_arm_delay</tabstop>
   <tabstop>scribe_on_delay</tabstop>
@@ -18768,6 +18858,7 @@ CONFIG</string>
   <tabstop>y_pierce_offset</tabstop>
   <tabstop>setup_feed_rate</tabstop>
   <tabstop>kerf_width</tabstop>
+  <tabstop>material_thickness</tabstop>
   <tabstop>pierce_height</tabstop>
   <tabstop>pierce_delay</tabstop>
   <tabstop>cut_height</tabstop>
